2020/03/23
• Minecraft server changes will now properly update the topic.
• Fixed pluralization error in taboo response.
2020/03/18
• Added blackjack functionality.
2020/01/13
• Added Minecraft command.
• Bot will let us know when Alex's IP address changes.
2019/12/24:
• Added dice rolling command.
• Added taboo and untaboo commands.
2019/12/18:
• Added echo command.
• Fix bug where bot got confused by its own name.
2018/08/28:
• Shaming is channel-specific.
• Bot no longer talks to itself.
2019/08/18:
• Shame command added.
2019/08/08:
• Improved database logic.
• Fix for exploding head 69 bug.
2019/08/03:
• Added names command.
• Added report bug command.
2019/08/02
• Added mute/unmute commands.
• Added kill command.
• Added patch notes command.
• Added help command.
• Added advice command.