@@ -1,3 +1,6 @@
+2020/03/31
+• Improved error logging.
+• Fixed bug where users couldn't be shamed.
 2020/03/23
 • Minecraft server changes will now properly update the topic.
 • Fixed pluralization error in taboo response.
